--- a/libft/Makefile
+++ b/libft/Makefile
@@ -17,7 +17,6 @@ CFLAGS		= -Wall -Wextra -Werror
 LIB			= ar -rcs
 
 BUILD_DIR  	:= ./.build/
-INCS		= libft.h
 SRCS		= ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c \
 				ft_strlen.c ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c \
 				ft_strlcpy.c ft_strlcat.c ft_toupper.c ft_tolower.c ft_strchr.c \
@@ -41,7 +40,7 @@ all: 		$(NAME)
 -include $(DEPS)
 $(BUILD_DIR)%.o:$(SRC_DIR)%.c
 	@mkdir -p $(@D)
-	@$(CC) $(CFLAGS) -c $< -o $@ -I $(INCS)
+	@$(CC) $(CFLAGS) -c $< -o $@
 
 $(NAME): $(OBJS)
 	@$(LIB)	$(NAME) $(OBJS)
